--- a/app/admin/view/git_think/edit_page.html
+++ b/app/admin/view/git_think/edit_page.html
@@ -22,6 +22,15 @@
                         </div>
                     </div>
                     <div class="form-group">
+                        <label class="col-xs-3 control-label">Secret</label>
+                        <div class="col-xs-9">
+                            <div class="input-group">
+                                <span class="input-group-addon"><span class="fa fa-pencil"></span></span>
+                                <input type="text"  value="{$secret_token}" name="secret_token" class="form-control"/>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <label class="col-xs-3 control-label">Key</label>
                         <div class="col-xs-9">
                             <div class="input-group">
