--- a/app/admin/view/git_think/home_page.html
+++ b/app/admin/view/git_think/home_page.html
@@ -19,6 +19,7 @@
                                 <th>Id</th>
                                 <th>名称</th>
                                 <th>KEY</th>
+                                <th>Secret</th>
                                 <th width="200px">描述</th>
                                 <th>时间</th>
                                 <th>操作</th>
@@ -30,6 +31,7 @@
                                 <td>{$v.id}</td>
                                 <td>{$v.name}</td>
                                 <td><span class="label label-info">{$v.key}</span></td>
+                                <td><span class="label label-success">{$v.secret_token}</span></td>
                                 <td>{$v.remark}</td>
                                 <td>{$v.c_time|date="Y-m-d H:i:s",###}</td>
                                 <td>
@@ -59,6 +61,15 @@
                                                 <div class="input-group">
                                                     <span class="input-group-addon"><span class="fa fa-pencil"></span></span>
                                                     <input type="text" name="name" class="form-control"/>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label class="col-md-3 control-label">Secret</label>
+                                            <div class="col-md-9">
+                                                <div class="input-group">
+                                                    <span class="input-group-addon"><span class="fa fa-pencil"></span></span>
+                                                    <input type="text" name="secret_token" class="form-control"/>
                                                 </div>
                                             </div>
                                         </div>
